resolver/java/deployment-uni-resolver-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uni-resolver-web
  labels:
    app: uni-resolver-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uni-resolver-web
  template:
    metadata:
      labels:
        app: uni-resolver-web
    spec:
      containers:
      - name: uni-resolver-web
        image: phil21/uni-resolver-web:latest
        ports:
        - containerPort: 8080
