resolver/java/nodeport-uni-resolver-web.yml
apiVersion: v1
kind: Service
metadata:
  name: "uni-resolver-web"
  namespace: "danubetech"
spec:
  type: NodePort
  selector:
    app: "uni-resolver-web"
  ports:
    - protocol: TCP
      port: 80 # Kubernetes internal service port
      targetPort: 8080 # Container port
      nodePort: 30000 # External port exposed
